# esp_exlib

./: .gitignore  CMakeLists.txt  README.md  exlib.h  exlib_config.h
inc/: exadc.h  exana_cmpr.h  exesp_timer.h  exgpio.h  exgptimer.h  exi2c.h  exi2s.h  exledc.h  exmcpwm.h  exparlio.h  expcnt.h  exrmt.h  exsd.h  exsdm.h  exsocket.h  exspi.h  extemperature_sensor.h  extouch_sens.h  extouch_sensor.h  extsens.h  extwai.h  exuart.h  exusb.h  exwifi.h
src/: exadc.c  exana_cmpr.c  exesp_timer.c  exgpio.c  exgptimer.c  exi2c.c  exi2s.c  exledc.c  exmcpwm.c  exparlio.c  expcnt.c  exrmt.c  exsd.c  exsdm.c  exsocket.c  exspi.c  extemperature_sensor.c  extouch_sens.c  extouch_sensor.c  extsens.c  extwai.c  exuart.c  exusb.c  exwifi.c
